<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="none">
        <item
            android:id="@+id/nav_facilties_docs"
            android:visible="false"
            android:icon="@drawable/ic_school_black_24dp"
            android:title="@string/faculties_docs" />
        <item
            android:id="@+id/nav_personal_docs"
            android:icon="@drawable/ic_save_black_24dp"
            android:title="@string/personal_docs" />
        <item
            android:id="@+id/nav_update_Subject"
            android:icon="@drawable/ic_restore_page_black_24dp"
            android:title="@string/update_subject" />

        <item
            android:id="@+id/nav_your_friend"
            android:icon="@drawable/ic_group_add_black_24dp"
            android:title="@string/your_friend_s" />
        <item
            android:id="@+id/nav_ask_for_docs"

            android:icon="@drawable/ask_for_document"
            android:title="@string/ask_for_docs" />
        <item
            android:id="@+id/nav_offers"
            android:icon="@drawable/ic_local_offer_black_24dp"
            android:title="Offer's" />
        <item
            android:id="@+id/nav_log_out"
            android:icon="@drawable/ic_lock_black_24dp"
            android:title="@string/log_out" />

    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_video"
                android:icon="@drawable/ic_ondemand_video_black_24dp"
                android:title="Tutorial" />
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_share_black_24dp"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_feedback_black_24dp"
                android:title="Send Feedback" />
        </menu>
    </item>

</menu>
