<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/pageBackground"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".activities.YourFriendActivity">


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="5dp"
        android:id="@+id/button_friendRequest"
        android:layout_marginRight="16dp"
        android:text="@string/see_friend_request"/>

    <TextView
        android:id="@+id/textview_studentof_class_bca"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/your_friends"
        android:textColor="@color/colorAccent"
        android:textSize="20sp"
        android:textStyle="bold" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"

        android:text="@string/they_peoples_have_authority_to_access_your_documents_long_press_to_removw_authority"
        android:textColor="@android:color/background_dark"
        android:textSize="17sp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:background="@color/pageBackground"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:id="@+id/recyclerView_studentlist" />

</LinearLayout>