<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".activities.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">



    <FrameLayout
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:background="@color/colorPrimary"
        android:layout_gravity="center_horizontal|center_vertical"
        android:layout_height="0dp">

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_weight="2"
        android:background="@color/pageBackground"
        android:layout_gravity="center_horizontal|center_vertical"
        android:layout_height="0dp">

    </FrameLayout>

    </LinearLayout>
    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardview_wallet"
            android:layout_width="match_parent"
            android:layout_margin="5dp"
            android:elevation="10dp"
            app:cardBackgroundColor="@color/colorWhite"
            app:cardCornerRadius="20dp"
            app:cardUseCompatPadding="true"
            android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingTop="55dp"
            android:background="@color/colorWhite"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/editText_email"
                    android:padding="10dp"
                    android:textSize="15sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edit_text_background"
                    android:hint="@string/prompt_email"
                    android:drawableStart="@drawable/username"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"

                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="5dp">

                <EditText
                    android:id="@+id/editText_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edit_text_background"
                    android:hint="@string/prompt_password"
                    android:drawableStart="@drawable/ic_security_black_24dp"
                    android:imeActionId="6"

                    android:textSize="15sp"
                    android:padding="10dp"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true" />

            </com.google.android.material.textfield.TextInputLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:text="@string/forgot_password"
                android:id="@+id/textView_forgotPassword"
                android:textColor="@color/colorAccent"
                android:layout_marginRight="10dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp" />


            </RelativeLayout>


            <Button
                android:id="@+id/email_sign_in_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:layout_marginBottom="30dp"
                android:text="@string/action_sign_in"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/colorBlack"
                android:text="@string/or_n_create_a_account"
                android:textSize="14sp"
                />

            <TextView
                android:id="@+id/textView_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:text="@string/register"
                android:textColor="@color/colorAccent"
                android:textSize="17sp"
                android:textStyle="bold" />

        </LinearLayout>
        </androidx.cardview.widget.CardView>
    </ScrollView>

    <ProgressBar
        android:id="@+id/progress_circular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/linear_layout_grey"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorGrey"
        android:orientation="vertical"
        android:visibility="gone"/>
</FrameLayout>