<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".activities.ProfileVisitActivity">



    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite">


        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Edit profile "
                android:textStyle="bold"
                android:textSize="16dp"
                android:id="@+id/edit_text_editProfile"
                android:textColor="@color/colorAccent"/>

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/circularImage_profilepic"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:src="@drawable/profile" />
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/editText_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"
                    android:enabled="false"
                    android:textColor="@color/colorBlack"
                    android:layout_marginTop="10dp"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true" />

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp">

                <EditText
                    android:id="@+id/edit_text_course"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:enabled="false"

                    android:textColor="@color/colorBlack"
                    android:hint="Course semseter section"
                    android:maxLines="1"
                    android:singleLine="true" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/editText_Department"
                    android:layout_width="match_parent"
                    android:enabled="false"

                    android:textColor="@color/colorBlack"
                    android:layout_height="wrap_content"
                    android:hint="@string/department"
                    android:layout_marginTop="10dp"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/editText_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_email"
                    android:layout_marginTop="10dp"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"

                    android:textColor="@color/colorBlack"
                    android:enabled="false"
                    android:singleLine="true" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/editText_admission_no"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                     android:hint="Admission Number"

                    android:textColor="@color/colorBlack"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:enabled="false"

                    android:singleLine="true" />

            </com.google.android.material.textfield.TextInputLayout>








            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp">

                <EditText
                    android:id="@+id/edit_date_Of_Birth"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                     android:hint="@string/date_of_birth"
                    android:layout_marginTop="10dp"
                    android:inputType="date"

                    android:textColor="@color/colorBlack"
                    android:maxLines="1"
                    android:enabled="false"
                    android:singleLine="true" />


            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp">

                <EditText
                    android:id="@+id/editText_College"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:enabled="false"

                    android:textColor="@color/colorBlack"
                    android:hint="College"
                     android:maxLines="1"
                    android:singleLine="true" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp">

                <EditText
                    android:id="@+id/edit_text_roll_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:maxLines="1"

                    android:textColor="@color/colorBlack"
                    android:hint="@string/roll_number"
                    android:singleLine="true"
                    android:enabled="false"/>

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp">

                <EditText
                    android:id="@+id/editText_Gender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:maxLines="1"

                    android:inputType="textPersonName"
                    android:textColor="@color/colorBlack"
                    android:hint="@string/gender"
                    android:singleLine="true"
                    android:enabled="false"/>

            </com.google.android.material.textfield.TextInputLayout>




<Button
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/button_submit"
    android:text="Upload"
    android:visibility="gone"
    android:textStyle="bold"
    android:layout_margin="10dp"
    android:layout_gravity="center_horizontal"
    />


        </LinearLayout>
    </ScrollView>
</LinearLayout>